--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,9 @@ main ol li.figures figure {
     padding:2em 0;
     margin:0;
 }
+main ol li.figures figure img {
+    width:100%;
+}
 li.citations {
     font-size:0.8em;
 }
