--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,12 @@ a {
     text-decoration: none;
     color: #FFF;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,
+ol.project table tr td:first-child,
+ol.project table thead tr:first-child th
+{
     font-family: Tahoma, Arial, sans-serif;
+    font-weight:bold;
 }
 h1{
 	font-size:3em;
@@ -158,12 +162,6 @@ table tr td:first-child {
     text-align:center;
     width:20%;
 }
-table td, table th  {
-    text-align:center;
-    border:1px solid #ddd;
-    padding:1em;
-}
-
 img.weather-icon {
     max-height:1.5em;
 }
@@ -239,4 +237,28 @@ div.tabs-container ol.tabs li,
 div.tabs-container div.tab-content {
     border-style:solid;
     border-color:#222;
+}
+
+table {
+    font-size:0.9em;
+}
+
+table td, table th  {
+    text-align:center;
+    border:1px solid #ddd;
+    padding:0.255em 0.5em;
+}
+
+ol.project table tr td:first-child {
+    width:30em;
+    white-space: nowrap;
+}
+ol.project table tr td:first-child,
+ol.project table thead tr:first-child
+{
+    background-color:#333;
+    color:#888;
+}
+ol.project table th a.source {
+    font-size:0.7em;
 }
