--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,14 @@ nav .nav-menu a:last-child{
   padding: 10px 20px;
   border-radius:10px;
 }
-
+main > ol.portfolio {
+    margin:0;
+}
+main > ol.portfolio li {
+    background:#080808;
+    border:solid 1px #333;
+    padding:1.5em;
+}
 main > ol.portfolio li > p {
     font-size:0.8em;
 }
