--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,8 @@ nav .nav-menu{
 	padding: 18px;
 }
 nav .nav-menu a{
+    display:inline-block;
+    line-height:1.7em;
 	padding: 0 30px;
 	text-transform:uppercase;
 	font-weight:900;
@@ -145,7 +147,7 @@ main ol.portfolio table + p
 main ol.portfolio pre {
     display:block;
     text-align:left;
-    width:100%;
+    width:90%;
 }
 main ol.portfolio pre code {
     display:block;
