--- a/styles.css
+++ b/styles.css
@@ -20,22 +20,28 @@ ol.project table thead tr:first-child th
     font-weight:bold;
 }
 h1{
-	font-size:3em;
+	font-size:0.8em;
+    font-weight:normal;
+    margin:5em 8em;
+    text-align: justify;
+    font-style: italic;
 }
 h2{
-	font-size:2em;
+	font-size:1.2em;
 }
 h3{
-	font-size:1.5em;
+	font-size:1.15em;
 }
 h4{
-	font-size:1.2em;
+	font-size:1.1em;
 }
 h5{
 	font-size:1.1em;
+    font-weight: normal;
 }
 h6{
 	font-size:1.05em;
+    font-weight: normal;
 }
 p{
     line-height: 2;
