--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
 	background-color:#1A1A1A;
 	color: #FFF;
-	font-size:23px;
+	font-size:21px;
 	font-family: "Times New Roman", serif;
 	text-align:center;
     padding: 0.5em 3em;
@@ -27,10 +27,10 @@ h1{
     font-style: italic;
 }
 h2{
-	font-size:1.2em;
+	font-size:1.15em;
 }
 h3{
-	font-size:1.15em;
+	font-size:1.125em;
 }
 h4{
 	font-size:1.1em;
@@ -44,13 +44,11 @@ h6{
     font-weight: normal;
 }
 p{
-    line-height: 2;
+    line-height: 1.5;
+    text-indent:1.5em;
 }
 ol{
 	text-align:left;
-}
-p {
-    text-indent:2em;
 }
 main > ol {
     list-style: none;
@@ -181,11 +179,8 @@ table caption {
     background:#ccc;
     padding:0.25em 0;
 }
-table tr {
-}
 table tr td:first-child {
     text-align:center;
-    width:20%;
 }
 img.weather-icon {
     max-height:1.5em;
@@ -270,18 +265,22 @@ table {
 
 table td, table th  {
     text-align:center;
-    border:1px solid #ddd;
+    border:1px solid #282828;
     padding:0.255em 0.5em;
+    font-size:0.9em;
+}
+table tfoot {
+    font-size:0.85em;
 }
 
 ol.project table tr td:first-child {
-    width:30em;
+    width:2em;
     white-space: nowrap;
 }
 ol.project table tr td:first-child,
 ol.project table thead tr:first-child
 {
-    background-color:#333;
+    background-color:#111;
     color:#888;
 }
 ol.project table th a.source {
