--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
 	background-color:#1A1A1A;
 	color: #FFF;
@@ -6,6 +5,10 @@ body {
 	font-family: "Times New Roman", serif;
 	text-align:center;
     padding: 0.5em 3em;
+}
+
+main {
+    overflow:hidden;
 }
 
 a {
@@ -43,7 +46,7 @@ h6{
 	font-size:1.05em;
     font-weight: normal;
 }
-p{
+main p {
     line-height: 1.5;
     text-indent:1.5em;
 }
@@ -52,9 +55,11 @@ ol{
 }
 main > ol {
     list-style: none;
+    margin:0;
+    padding:0;
 }
 main > ol > li {
-    margin:3em 0;
+    margin:3em 0.5em;
 }
 nav {
 	display:flex;
@@ -88,6 +93,7 @@ nav .nav-menu{
 	border-radius: 10px;
 	background:rgba(255, 255, 255, 0.05);
 	padding: 18px;
+    color:#646464;
 }
 nav .nav-menu a{
     display:inline-block;
@@ -95,14 +101,14 @@ nav .nav-menu a{
 	padding: 0 30px;
 	text-transform:uppercase;
 	font-weight:900;
-	color:#646464;
 	transition:ease .2s;
+    color:inherit;
 }
 nav .nav-menu a:hover, nav .nav-menu a:active{
 	color:#6CEFEF;
 }
-nav .nav-menu a:last-child{
-	background-color:#6377EE;
+nav .nav-menu a:last-child {
+  background-color:#6377EE;
   color:#FFF;
   padding: 10px 20px;
   border-radius:10px;
@@ -298,4 +304,93 @@ ol.project table thead tr:first-child
 }
 ol.project table th a.source {
     font-size:0.7em;
+}
+
+@media only screen and (max-width: 500px) {
+    body {
+        padding:0;
+        margin:0;
+        font-size:16px;
+    }
+    main h1 {
+        margin-left:3em;
+        margin-right:3em;
+    }
+    main > ol > li.table {
+        padding-left:0.1em;
+        padding-right:0.1em;
+        margin-left:0;
+        margin-right:0;
+    }
+    main > ol > li.table > div.table {
+        background:#333;
+        border-top:3px solid #777;
+        border-bottom:3px solid #777;
+        padding-top:0.3em;
+        padding-bottom:0.3em;
+        max-width:100%;
+        overflow:scroll;
+    }
+    main > ol > li.table table {
+        border-width:0;
+        padding:0;
+        margin:0;
+        font-size:0.8em;
+    }
+    main > ol > li.table table td {
+        padding:0.3em 0.1em;
+        border-width:1px;
+    }
+    nav {
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+    nav div.site-title {
+        font-size:1.3em;
+        width:auto;
+        padding:1.5em 0.5em;
+    }
+    nav div.site-title h3 {
+        margin:0;
+        padding:0;
+    }
+    nav div.site-title p {
+        margin:0;
+    }
+    nav {
+        padding: 0 0.2em;
+    }
+    nav .nav-menu {
+        border-width:0;
+        background:transparent;
+        width:auto;
+    }
+    nav .nav-menu a {
+        margin:0;
+        padding:0;
+    }
+    nav .nav-menu a:last-child {
+        background:transparent;
+        color:inherit;
+        margin:0;
+        padding:0;
+    }
+    main > ol > li ol {
+        padding:1.2em;
+    }
+    main > ol > li figure {
+        width:auto;
+        padding:0.2em;
+        margin:0;
+    }
+    div.tabs-container ol.tabs {
+        font-size:0.8em;
+    }
+    div.tabs-container div.tab-content {
+        padding-left:0.1em;
+        padding-right:0.1em;
+        padding-top:0.6em;
+        padding-bottom:0.6em;
+
+    }
 }
