--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h1 {
     text-align: justify;
     margin:1em;
 }
-main.project h1 {
+main.project h1.long-title {
     font-size:0.8em;
     font-size:0.8em;
     margin:5em 8em;
@@ -320,7 +320,7 @@ ol.project table th a.source {
         margin:0;
         font-size:16px;
     }
-    main.project h1 {
+    main.project h1.long-title {
         margin-left:3em;
         margin-right:3em;
     }
