week1: copy from github RDeconomist

--- a/portfolio.scss
+++ b/portfolio.scss
@@ -17,7 +17,8 @@ body#portfolio {
       &:nth-child(even):not(.half) {
         background-color:#222;
       }
-      &#week1, &#week2,
+      &#week1,
+      &#week2,
       &.half {
         display:inline-block;
         width:43%;
