--- a/portfolio.css
+++ b/portfolio.css
@@ -16,14 +16,14 @@ body#portfolio {
       border-bottom: 0; }
       body#portfolio main > ol > li:nth-child(even):not(.half) {
         background-color: #222; }
-      body#portfolio main > ol > li#week1, body#portfolio main > ol > li#week2, body#portfolio main > ol > li.half {
+      body#portfolio main > ol > li#week1, body#portfolio main > ol > li#week2, body#portfolio main > ol > li#week3-1, body#portfolio main > ol > li#week3-2, body#portfolio main > ol > li.half {
         display: inline-block;
         width: 43%;
         border-right: 1px solid #000;
         margin-top: 2em;
         margin-bottom: 2em;
         border-radius: 30px; }
-        body#portfolio main > ol > li#week1 + .half, body#portfolio main > ol > li#week2 + .half, body#portfolio main > ol > li.half + .half {
+        body#portfolio main > ol > li#week1 + .half, body#portfolio main > ol > li#week2 + .half, body#portfolio main > ol > li#week3-1 + .half, body#portfolio main > ol > li#week3-2 + .half, body#portfolio main > ol > li.half + .half {
           border-right-width: 0; }
       body#portfolio main > ol > li table {
         border: 1px solid #444; }
