--- a/portfolio.scss
+++ b/portfolio.scss
@@ -19,6 +19,8 @@ body#portfolio {
       }
       &#week1,
       &#week2,
+      &#week3-1,
+      &#week3-2,
       &.half {
         display:inline-block;
         width:43%;
