--- a/portfolio.scss
+++ b/portfolio.scss
@@ -22,6 +22,7 @@ body#portfolio {
       &#week3-1,
       &#week3-2,
       &.half {
+        background:#333;
         display:inline-block;
         width:43%;
         border-right:1px solid #000;
