--- a/portfolio.scss
+++ b/portfolio.scss
@@ -33,6 +33,9 @@ body#portfolio {
           border-right-width:0;
         }
       }
+      &.figures {
+        text-align:center;
+      }
       table {
         caption {
           background:#444;
