--- a/portfolio.scss
+++ b/portfolio.scss
@@ -33,7 +33,7 @@ body#portfolio {
           border-right-width:0;
         }
       }
-      &.figures {
+      &.figure {
         text-align:center;
       }
       table {
