--- a/styles.scss
+++ b/styles.scss
@@ -140,9 +140,7 @@ main > ol li div {
     font-size:1em;
 }
 
-main ol li figure {
-    display:inline-block;
-    width:45%;
+main ol li figure:not(:only-child) {
     background:#444;
     padding:1em 1.5em;
     margin:1em;
@@ -154,6 +152,9 @@ main ol li figure img {
 }
 main ol li figure figcaption {
     display:block;
+}
+
+main ol li.figure figure {
 }
 main ol li.figures figure {
     display:inline-block;
