week 7: choropleth map

--- a/portfolio.scss
+++ b/portfolio.scss
@@ -45,7 +45,7 @@ body#portfolio {
           background:#3a3a3a;
         }
       }
-      &#week5 {
+      &#week5, &#week7 {
         text-align:center;
         div.vega-containers {
           display:flex;
