--- a/portfolio.css
+++ b/portfolio.css
@@ -16,7 +16,7 @@ body#portfolio {
       border-bottom: 0; }
       body#portfolio main > ol > li:nth-child(even):not(.half) {
         background-color: #222; }
-      body#portfolio main > ol > li#week1, body#portfolio main > ol > li#week2, body#portfolio main > ol > li#week3-1, body#portfolio main > ol > li#week3-2, body#portfolio main > ol > li#week8, body#portfolio main > ol > li.half {
+      body#portfolio main > ol > li#week1, body#portfolio main > ol > li#week2, body#portfolio main > ol > li#week3-1, body#portfolio main > ol > li#week3-2, body#portfolio main > ol > li#week8, body#portfolio main > ol > li#week9, body#portfolio main > ol > li.half {
         background: #333;
         display: inline-block;
         width: 43%;
@@ -24,8 +24,11 @@ body#portfolio {
         margin-top: 2em;
         margin-bottom: 2em;
         border-radius: 30px; }
-        body#portfolio main > ol > li#week1 + .half, body#portfolio main > ol > li#week2 + .half, body#portfolio main > ol > li#week3-1 + .half, body#portfolio main > ol > li#week3-2 + .half, body#portfolio main > ol > li#week8 + .half, body#portfolio main > ol > li.half + .half {
+        body#portfolio main > ol > li#week1 + .half, body#portfolio main > ol > li#week2 + .half, body#portfolio main > ol > li#week3-1 + .half, body#portfolio main > ol > li#week3-2 + .half, body#portfolio main > ol > li#week8 + .half, body#portfolio main > ol > li#week9 + .half, body#portfolio main > ol > li.half + .half {
           border-right-width: 0; }
+        body#portfolio main > ol > li#week1 .vega-canvas, body#portfolio main > ol > li#week2 .vega-canvas, body#portfolio main > ol > li#week3-1 .vega-canvas, body#portfolio main > ol > li#week3-2 .vega-canvas, body#portfolio main > ol > li#week8 .vega-canvas, body#portfolio main > ol > li#week9 .vega-canvas, body#portfolio main > ol > li.half .vega-canvas {
+          border: 1px solid #aaa;
+          background: #282828; }
       body#portfolio main > ol > li.figure {
         text-align: center; }
       body#portfolio main > ol > li table {
