--- a/styles.scss
+++ b/styles.scss
@@ -220,7 +220,7 @@ img.weather-icon {
 }
 
 
-main ol.project div.vega-container {
+main ol div.vega-container {
     text-align:center;
 }
 main ol.project div.vega-canvas + p,
