week 10 - chart from Colab

--- a/portfolio.scss
+++ b/portfolio.scss
@@ -23,6 +23,7 @@ body#portfolio {
       &#week3-2,
       &#week8,
       &#week9,
+      &#week10,
       &.half {
         background:#333;
         display:inline-block;
