--- a/portfolio.scss
+++ b/portfolio.scss
@@ -1,6 +1,10 @@
 body#portfolio {
   padding:0;
   margin:0;
+  a {
+    color:#999;
+    text-decoration: underline;
+  }
   main > ol {
     display:flex;
     flex-direction:row;
@@ -24,6 +28,7 @@ body#portfolio {
       &#week8,
       &#week9,
       &#week10,
+      &#week11,
       &.half {
         background:#333;
         display:inline-block;
@@ -39,6 +44,15 @@ body#portfolio {
         .vega-canvas {
           border:1px solid #aaa;
           background:#282828;
+        }
+        figure {
+          padding-left:0.5em;
+          padding-right:0.5em;
+          padding-bottom:1em;
+          img {
+            margin-bottom:1em;
+          }
+          text-align:center;
         }
       }
       &.figure {
