--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,8 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center; }
+  nav a {
+    color: #fff; }
 
 nav .site-title {
   width: 30%;
@@ -98,7 +100,7 @@ nav .nav-menu a {
   text-transform: uppercase;
   font-weight: 900;
   transition: ease .2s;
-  color: inherit; }
+  color: #fff; }
 
 nav .nav-menu a:hover, nav .nav-menu a:active {
   color: #6CEFEF; }
